{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 106,
  "lineage": "6801e046-bfd2-0554-02d5-3d6750deec57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8d3086f204a9ad3",
            "arn": "arn:aws:ec2:ap-south-1:060795923562:elastic-ip/eipalloc-0a8d3086f204a9ad3",
            "domain": "vpc",
            "id": "eipalloc-0a8d3086f204a9ad3",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-109-220.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.109.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fbc693f77b3fd8a",
            "arn": "arn:aws:ec2:ap-south-1:060795923562:elastic-ip/eipalloc-07fbc693f77b3fd8a",
            "domain": "vpc",
            "id": "eipalloc-07fbc693f77b3fd8a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-250-47.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.250.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e85d99837ec9866",
            "arn": "arn:aws:ec2:ap-south-1:060795923562:elastic-ip/eipalloc-05e85d99837ec9866",
            "domain": "vpc",
            "id": "eipalloc-05e85d99837ec9866",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-161-48.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.161.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:internet-gateway/igw-0a5e14617eb7a0af1",
            "id": "igw-0a5e14617eb7a0af1",
            "owner_id": "060795923562",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8d3086f204a9ad3",
            "association_id": "eipassoc-0ceecbec5fbedfe1a",
            "connectivity_type": "public",
            "id": "nat-02a0f68158fcc1951",
            "network_interface_id": "eni-0e0b13bd58e48951d",
            "private_ip": "10.0.0.222",
            "public_ip": "13.203.109.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0343cc2e1921b12db",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fbc693f77b3fd8a",
            "association_id": "eipassoc-074a9d71aa7dbb296",
            "connectivity_type": "public",
            "id": "nat-0b277ce65ca268481",
            "network_interface_id": "eni-04f6a670df1d0dc41",
            "private_ip": "10.0.1.13",
            "public_ip": "13.203.250.47",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de9edeed4fee1827",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e85d99837ec9866",
            "association_id": "eipassoc-099addb8bf5bae53d",
            "connectivity_type": "public",
            "id": "nat-0c47e51dbbdaef0c4",
            "network_interface_id": "eni-0cf8926094e2263c4",
            "private_ip": "10.0.2.118",
            "public_ip": "15.207.161.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b3797abf0194b72",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:route-table/rtb-0ad25631a90ca4b61",
            "id": "rtb-0ad25631a90ca4b61",
            "owner_id": "060795923562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5e14617eb7a0af1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:route-table/rtb-0479949d9abf600b7",
            "id": "rtb-0479949d9abf600b7",
            "owner_id": "060795923562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a0f68158fcc1951",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:route-table/rtb-0613bc1390bec7ff2",
            "id": "rtb-0613bc1390bec7ff2",
            "owner_id": "060795923562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b277ce65ca268481",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:route-table/rtb-0b0b2b91a6f638a8b",
            "id": "rtb-0b0b2b91a6f638a8b",
            "owner_id": "060795923562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c47e51dbbdaef0c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08498dd84d4270431",
            "route_table_id": "rtb-0ad25631a90ca4b61",
            "subnet_id": "subnet-0343cc2e1921b12db"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8d0fcda2fab5eb1",
            "route_table_id": "rtb-0ad25631a90ca4b61",
            "subnet_id": "subnet-0de9edeed4fee1827"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b5d51a388eaae53",
            "route_table_id": "rtb-0ad25631a90ca4b61",
            "subnet_id": "subnet-09b3797abf0194b72"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeebb8b003cbf13a",
            "route_table_id": "rtb-0479949d9abf600b7",
            "subnet_id": "subnet-08661c1c6cd64d1f5"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6ac2fb41dfffe09",
            "route_table_id": "rtb-0613bc1390bec7ff2",
            "subnet_id": "subnet-0dadacb061633ed8c"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed51f7934a3f080a",
            "route_table_id": "rtb-0b0b2b91a6f638a8b",
            "subnet_id": "subnet-0a5c805d5e21bacdb"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:subnet/subnet-08661c1c6cd64d1f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08661c1c6cd64d1f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060795923562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-0"
            },
            "tags_all": {
              "Name": "Private-0"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:subnet/subnet-0dadacb061633ed8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dadacb061633ed8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060795923562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:subnet/subnet-0a5c805d5e21bacdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5c805d5e21bacdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060795923562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:subnet/subnet-0343cc2e1921b12db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0343cc2e1921b12db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795923562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-0"
            },
            "tags_all": {
              "Name": "Public-0"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:subnet/subnet-0de9edeed4fee1827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de9edeed4fee1827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795923562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-1"
            },
            "tags_all": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:subnet/subnet-09b3797abf0194b72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b3797abf0194b72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795923562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-2"
            },
            "tags_all": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-0ce611edb24d1fa43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:060795923562:vpc/vpc-0ce611edb24d1fa43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0889bdec0ea59623b",
            "default_route_table_id": "rtb-08a2532abc347e8e3",
            "default_security_group_id": "sg-0f21b290b2491665b",
            "dhcp_options_id": "dopt-05ebd49ddb6d7891a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce611edb24d1fa43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a2532abc347e8e3",
            "owner_id": "060795923562"
          }
        }
      ]
    }
  ]
}